--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,9 +23,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+        lfs: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install gitpython
         pip install build
     - name: Build package
       run: python -m build
