--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,11 +23,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-        lfs: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install gitpython
+        python -m pip install gitpython
         pip install build
     - name: Build package
       run: python -m build
@@ -36,4 +35,3 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
-        lfs: true
