--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -23,11 +23,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+        cache: 'pip'
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install gitpython
-        pip install build
+      run: pip install -r requirements.txt
     - name: Build package
       run: python -m build
     - name: Publish package
